# cgfx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  meshexport.hdalc
resource/: box.txt  cgfx.afphoto  simple.frag  simple.vert
scripts/: bbuild.bat  ccompile.bat  ccompilerun.bat  destroy.bat
source/: core.h  fileops.c  fileops.h  houModelExport.py  main.c  shader.c  shader.h
source/models/: cubeIndices.txt  cubeVertices.txt  pigIndices.txt  pigVertices.txt  rubberIndices.txt  rubberVertices.txt  sphereIndices.txt  sphereVertices.h
